--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,12 +6,15 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.24"
+                googlePlayServicesAuthVersion = "20.7.0" // <--- use this version or newer
+
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+            classpath 'com.google.gms:google-services:4.4.2'
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
